--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "open:src": "babel-node tools/srcServer.js",
     "test": "mocha --reporter progress tools/testSetup.js src/*.test.js",
     "test:watch": "npm run test -- --watch",
-    "lint": "node_modules/.bin/esw webpack.config.* src",
+    "lint": "node_modules/.bin/esw webpack.config.* tools src",
     "lint:watch": "npm run lint -- --watch"
   },
   "keywords": [
@@ -38,6 +38,7 @@
     "babel-preset-react": "^6.5.0",
     "babel-preset-stage-0": "^6.5.0",
     "colors": "^1.1.2",
+    "css-loader": "^0.23.1",
     "enzyme": "^2.3.0",
     "eslint": "^2.11.1",
     "eslint-plugin-import": "^1.8.1",
@@ -45,19 +46,32 @@
     "eslint-watch": "^2.1.11",
     "expect": "^1.20.1",
     "express": "^4.13.4",
+    "file-loader": "^0.8.5",
     "jsdom": "^9.2.1",
     "mocha": "^2.5.3",
+    "nock": "^8.0.0",
     "npm-run-all": "^2.1.1",
     "open": "0.0.5",
+    "react-addons-test-utils": "^15.1.0",
     "react-hot-loader": "^3.0.0-beta.2",
+    "redux-immutable-state-invariant": "^1.2.3",
+    "redux-mock-store": "^1.0.4",
+    "style-loader": "^0.13.1",
+    "url-loader": "^0.5.7",
     "webpack": "^1.13.1",
     "webpack-dev-middleware": "^1.6.1",
     "webpack-hot-middleware": "^2.10.0"
   },
   "dependencies": {
+    "bootstrap": "^3.3.6",
     "react": "^15.1.0",
     "react-dom": "^15.1.0",
-    "react-router": "^2.4.1"
+    "react-redux": "^4.4.5",
+    "react-router": "^2.4.1",
+    "react-router-redux": "^4.0.4",
+    "redux": "^3.5.2",
+    "redux-thunk": "^2.1.0",
+    "toastr": "^2.1.2"
   },
   "repository": {
     "type": "git",
