Redux added. Basic Firebase working

--- a/.eslintrc
+++ b/.eslintrc
@@ -23,7 +23,8 @@
   },
   "settings": {
     "import/ignore": [
-      "node_modules"
+      "node_modules",
+      "src/store/configureStore"
     ]
   },
   "rules": {
