--- a/package.json
+++ b/package.json
@@ -64,6 +64,8 @@
   },
   "dependencies": {
     "bootstrap": "^3.3.6",
+    "firebase": "^3.0.3",
+    "jquery": "^2.2.4",
     "react": "^15.1.0",
     "react-dom": "^15.1.0",
     "react-redux": "^4.4.5",
