--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "react-hot-redux-firebase-starter",
-  "version": "1.0.0",
+  "version": "0.1.0",
   "description": "Boilerplate for ReactJS, Redux, Hot Loading and Firebase 3.x",
   "scripts": {
     "prestart": "babel-node tools/startMessage.js",
@@ -69,7 +69,7 @@
     "react": "^15.1.0",
     "react-dom": "^15.1.0",
     "react-loader": "^2.4.0",
-    "react-redux": "^4.4.5",
+    "react-redux": "^`",
     "react-router": "^2.4.1",
     "react-router-redux": "^4.0.4",
     "redux": "^3.5.2",
