Fixed React Redux version

--- a/package.json
+++ b/package.json
@@ -69,7 +69,7 @@
     "react": "^15.1.0",
     "react-dom": "^15.1.0",
     "react-loader": "^2.4.0",
-    "react-redux": "^`",
+    "react-redux": "^4.4.5",
     "react-router": "^2.4.1",
     "react-router-redux": "^4.0.4",
     "redux": "^3.5.2",
