--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "babel-preset-es2015": "^6.9.0",
     "babel-preset-react": "^6.5.0",
     "babel-preset-stage-0": "^6.5.0",
+    "babel-register": "6.9.0",
     "colors": "^1.1.2",
     "css-loader": "^0.23.1",
     "enzyme": "^2.3.0",
