npm:  Set project settings (name, description)
Signed-off-by: Clément Lucas <clement.lucas@ynotek.fr>

--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "react-hot-redux-firebase-starter",
+  "name": "ChatX",
   "version": "0.1.0",
-  "description": "Boilerplate for ReactJS, Redux, Hot Loading and Firebase 3.x",
+  "description": "Chat room application",
   "scripts": {
     "prestart": "babel-node tools/startMessage.js",
     "start": "npm-run-all --parallel test:watch open:src lint:watch",
