--- a/package.json
+++ b/package.json
@@ -24,6 +24,9 @@
     "firebase"
   ],
   "author": "Dan Abramov <dan.abramov@me.com> (http://github.com/gaearon)",
+  "contributors": [
+    "Clément Lucas <clement.lucas@ynotek.fr>"
+  ],
   "license": "MIT",
   "bugs": {
     "url": "https://github.com/gaearon/react-hot-boilerplate/issues"
