--- a/package.json
+++ b/package.json
@@ -71,11 +71,12 @@
     "firebase": "^3.0.3",
     "jquery": "^2.2.4",
     "react": "^15.1.0",
+    "react-bootstrap": "^0.30.8",
     "react-dom": "^15.1.0",
     "react-loader": "^2.4.0",
-    "react-materialize": "^0.18.1",
     "react-redux": "^4.4.5",
     "react-router": "^2.4.1",
+    "react-router-bootstrap": "^0.23.1",
     "react-router-redux": "^4.0.4",
     "react-spinkit": "^2.1.1",
     "redux": "^3.5.2",
