Add: lite customization

--- a/package.json
+++ b/package.json
@@ -68,6 +68,7 @@
     "firebase": "^3.0.3",
     "jquery": "^2.2.4",
     "react": "^15.1.0",
+    "react-avatar": "^2.3.0",
     "react-dom": "^15.1.0",
     "react-loader": "^2.4.0",
     "react-redux": "^4.4.5",
