--- a/package.json
+++ b/package.json
@@ -73,7 +73,9 @@
     "react-redux": "^4.4.5",
     "react-router": "^2.4.1",
     "react-router-redux": "^4.0.4",
+    "react-scrollable-list": "^1.1.3",
     "redux": "^3.5.2",
+    "redux-observable": "^0.14.1",
     "redux-thunk": "^2.1.0",
     "toastr": "^2.1.2"
   },
