--- a/package.json
+++ b/package.json
@@ -64,6 +64,7 @@
     "webpack-hot-middleware": "^2.10.0"
   },
   "dependencies": {
+    "base-64": "^0.1.0",
     "bootstrap": "^3.3.6",
     "firebase": "^3.0.3",
     "jquery": "^2.2.4",
