--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
     "prestart": "babel-node tools/startMessage.js",
     "start": "npm-run-all --parallel test:watch open:src lint:watch",
     "open:src": "babel-node tools/srcServer.js",
-    "test": "mocha --reporter progress tools/testSetup.js src/*.test.js",
+    "test": "mocha --reporter progress tools/testSetup.js src/*.test.js src/components/chat/*.test.js",
     "test:watch": "npm run test -- --watch",
     "lint": "node_modules/.bin/esw webpack.config.* tools src",
     "lint:watch": "npm run lint -- --watch"
@@ -68,6 +68,7 @@
     "bootstrap": "^3.3.6",
     "firebase": "^3.0.3",
     "jquery": "^2.2.4",
+    "moment": "^2.19.1",
     "prop-types": "^15.6.0",
     "ramda": "^0.25.0",
     "react": "^15.1.0",
