--- a/package.json
+++ b/package.json
@@ -67,6 +67,7 @@
     "bootstrap": "^3.3.6",
     "firebase": "^3.0.3",
     "jquery": "^2.2.4",
+    "lodash": "^4.17.4",
     "react": "^15.1.0",
     "react-dom": "^15.1.0",
     "react-loader": "^2.4.0",
@@ -74,7 +75,9 @@
     "react-router": "^2.4.1",
     "react-router-redux": "^4.0.4",
     "redux": "^3.5.2",
+    "redux-saga": "^0.16.0",
     "redux-thunk": "^2.1.0",
+    "reselect": "^3.0.1",
     "toastr": "^2.1.2"
   },
   "repository": {
