--- a/.babelrc
+++ b/.babelrc
@@ -1,4 +1,8 @@
 {
   "presets": ["es2015", "stage-0", "react"],
-  "plugins": ["react-hot-loader/babel"]
+  "plugins": [
+    "transform-decorators-legacy",
+    "react-hot-loader/babel", 
+    "styled-jsx/babel"
+  ]
 }
