--- a/.eslintrc
+++ b/.eslintrc
@@ -7,11 +7,13 @@
   "plugins": [
     "react"
   ],
+  "parser": "babel-eslint",
   "parserOptions": {
     "ecmaVersion": 6,
     "sourceType": "module",
     "ecmaFeatures": {
-      "jsx": true
+      "jsx": true,
+      "experimentalDecorators": true
     }
   },
   "env": {
