--- a/package.json
+++ b/package.json
@@ -64,9 +64,14 @@
     "webpack-hot-middleware": "^2.10.0"
   },
   "dependencies": {
+    "babel-plugin-transform-decorators-legacy": "^1.3.4",
     "bootstrap": "^3.3.6",
     "firebase": "^3.0.3",
+    "flexboxgrid": "^6.3.1",
     "jquery": "^2.2.4",
+    "mobx": "^3.4.1",
+    "mobx-react": "^4.3.5",
+    "rc-form": "^2.1.4",
     "react": "^15.1.0",
     "react-dom": "^15.1.0",
     "react-loader": "^2.4.0",
@@ -75,6 +80,8 @@
     "react-router-redux": "^4.0.4",
     "redux": "^3.5.2",
     "redux-thunk": "^2.1.0",
+    "shortid": "^2.2.8",
+    "styled-jsx": "^2.2.1",
     "toastr": "^2.1.2"
   },
   "repository": {
