style(config): update comma-dangle rule

--- a/.eslintrc
+++ b/.eslintrc
@@ -39,6 +39,7 @@
     "no-underscore-dangle": 0,
     "no-alert": 0,
     "no-lone-blocks": 0,
+    "comma-dangle": ["error", "always-multiline"],
     "jsx-quotes": 1,
     "react/display-name": [ 1, {"ignoreTranspilerName": false }],
     "react/forbid-prop-types": [1, {"forbid": ["any"]}],
