feat(chat): first hardcoded stateless components

--- a/.eslintrc
+++ b/.eslintrc
@@ -50,7 +50,7 @@
     "react/jsx-indent-props": 0,
     "react/jsx-key": 1,
     "react/jsx-max-props-per-line": 0,
-    "react/jsx-no-bind": 1,
+    "react/jsx-no-bind": [1, { "allowArrowFunctions": true }],
     "react/jsx-no-duplicate-props": 1,
     "react/jsx-no-literals": 0,
     "react/jsx-no-undef": 1,
