--- a/package.json
+++ b/package.json
@@ -34,6 +34,8 @@
     "babel-core": "^6.9.1",
     "babel-eslint": "^6.0.4",
     "babel-loader": "^6.2.4",
+    "babel-plugin-transform-decorators-legacy": "^1.3.4",
+    "babel-polyfill": "^6.26.0",
     "babel-preset-es2015": "^6.9.0",
     "babel-preset-react": "^6.5.0",
     "babel-preset-stage-0": "^6.5.0",
@@ -67,6 +69,7 @@
     "bootstrap": "^3.3.6",
     "firebase": "^3.0.3",
     "jquery": "^2.2.4",
+    "ramda": "^0.25.0",
     "react": "^15.1.0",
     "react-dom": "^15.1.0",
     "react-loader": "^2.4.0",
@@ -74,6 +77,8 @@
     "react-router": "^2.4.1",
     "react-router-redux": "^4.0.4",
     "redux": "^3.5.2",
+    "redux-actions": "^2.3.2",
+    "redux-logger": "^3.0.6",
     "redux-thunk": "^2.1.0",
     "toastr": "^2.1.2"
   },
