--- a/package.json
+++ b/package.json
@@ -78,6 +78,7 @@
     "react-router-redux": "^4.0.4",
     "redux": "^3.5.2",
     "redux-actions": "^2.3.2",
+    "redux-fun": "^1.3.7",
     "redux-logger": "^3.0.6",
     "redux-thunk": "^2.1.0",
     "reselect": "^3.0.1",
