fix: make production ready app

--- a/.babelrc
+++ b/.babelrc
@@ -1,7 +1,13 @@
 {
   "presets": ["es2015", "stage-0", "react"],
   "plugins": [
-    "react-hot-loader/babel",
     "transform-decorators-legacy"
-  ]
+  ],
+  "env": {
+    "development": {
+      "plugins": [
+        "react-hot-loader/babel"
+      ]
+    }
+  }
 }
