refactor(chat): migrate errors middleware to saga

--- a/package.json
+++ b/package.json
@@ -48,6 +48,7 @@
     "eslint": "^2.11.1",
     "eslint-plugin-import": "^1.8.1",
     "eslint-plugin-react": "^5.1.1",
+    "eslint-plugin-redux-saga": "^0.8.0",
     "eslint-watch": "^2.1.11",
     "expect": "^1.20.1",
     "express": "^4.13.4",
@@ -83,6 +84,7 @@
     "redux-actions": "^2.3.2",
     "redux-fun": "^1.3.7",
     "redux-logger": "^3.0.6",
+    "redux-saga": "^0.16.0",
     "redux-thunk": "^2.1.0",
     "reselect": "^3.0.1",
     "toastr": "^2.1.2"
