--- a/.eslintrc
+++ b/.eslintrc
@@ -5,7 +5,8 @@
     "plugin:import/warnings"
   ],
   "plugins": [
-    "react"
+    "react",
+    "redux-saga"
   ],
   "parser": "babel-eslint",
   "parserOptions": {
@@ -68,6 +69,9 @@
     "react/require-extension": 1,
     "react/self-closing-comp": 1,
     "react/sort-comp": 1,
-    "react/wrap-multilines": 1
+    "react/wrap-multilines": 1,
+    "no-constant-condition": 0,
+    "redux-saga/no-yield-in-race": 2,
+    "redux-saga/yield-effects": 2
   }
 }
