--- a/package.json
+++ b/package.json
@@ -63,6 +63,7 @@
     "react-hot-loader": "^3.0.0-beta.2",
     "redux-immutable-state-invariant": "^1.2.3",
     "redux-mock-store": "^1.0.4",
+    "sinon": "^5.0.7",
     "style-loader": "^0.13.1",
     "url-loader": "^0.5.7",
     "webpack": "^1.13.1",
