--- a/package.json
+++ b/package.json
@@ -11,7 +11,8 @@
     "test": "mocha tools/testSetup.js \"src/**/*.spec.js\"",
     "test:watch": "npm run test -- --watch",
     "lint": "node_modules/.bin/esw webpack.config.* tools src",
-    "lint:watch": "npm run lint -- --watch"
+    "lint:watch": "npm run lint -- --watch",
+    "deploy": "npm run clean && npm run lint && npm run test && npm run build && git checkout gh-pages && cp dist/* . && git add -A . && (git c -m 'chore(gh-pages): deploy' && git push) ; git checkout -"
   },
   "keywords": [
     "react",
