ci: simplify circleci configuration file

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -2,7 +2,7 @@
 
 version: 2
 jobs:
-  install:
+  test_all:
     docker:
       - image: circleci/node:9
     filters:
@@ -14,74 +14,17 @@ jobs:
       # install
       - run: npm install
 
-      - save_cache:
-          paths:
-            - node_modules
-            - package-lock.json
-          key: handle-io-dependencies-{{ checksum "package-lock.json" }}
+      # test
+      - run: npm run test:ci
 
-  build:
-    docker:
-      - image: circleci/node:9
-    filters:
-      branches:
-        ignore: gh-pages
-    steps:
-      - checkout
-      - restore-cache:
-          keys:
-            - handle-io-dependencies-{{ checksum "package-lock.json" }}
-
-      # run build
+      # build
       - run: npm run build
 
       - store_artifacts:
           path: ./dist
 
-  unit_test:
-    docker:
-      - image: circleci/node:9
-    filters:
-      branches:
-        ignore: gh-pages
-    steps:
-      - checkout
-      - restore-cache:
-          keys:
-            - handle-io-dependencies-{{ checksum "package-lock.json" }}
-
-      # run test
-      - run: npm run test
-
-  style_test:
-    docker:
-      - image: circleci/node:9
-    filters:
-      branches:
-        ignore: gh-pages
-    steps:
-      - checkout
-      - restore-cache:
-          keys:
-            - handle-io-dependencies-{{ checksum "package-lock.json" }}
-
-      # run lint
-      - run: npm run lint
-
 workflows:
   version: 2
-  build_test:
+  install_test_and_build:
     jobs:
-      - install
-      - unit_test:
-          requires:
-            - install
-
-      - style_test:
-          requires:
-            - install
-
-      - build:
-          requires:
-            - unit_test
-            - style_test
+      - test_all
