--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "test:watch": "npm run test -- --watch",
     "lint": "node_modules/.bin/esw webpack.config.* tools src",
     "lint:watch": "npm run lint -- --watch",
+    "test:ci": "npm run lint && npm run test",
     "deploy": "npm run clean && npm run lint && npm run test && npm run build && git checkout gh-pages && cp dist/* . && git add -A . && (git c -m 'chore(gh-pages): deploy' && git push) ; git checkout -"
   },
   "keywords": [
