--- a/.eslintrc
+++ b/.eslintrc
@@ -1,4 +1,5 @@
 {
+ "parser": "babel-eslint",
   "extends": [
     "eslint:recommended",
     "plugin:import/errors",
@@ -22,6 +23,9 @@
     "mocha": true
   },
   "settings": {
+    "import/resolver": {
+      "babel-module": {}
+    },
     "import/ignore": [
       "node_modules"
     ]
@@ -69,6 +73,7 @@
     "react/require-extension": 1,
     "react/self-closing-comp": 1,
     "react/sort-comp": 1,
-    "react/wrap-multilines": 1
+    "react/wrap-multilines": 1,
+    "comma-dangle": ["error", "always-multiline"]
   }
 }
