--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "react-hot-redux-firebase-starter",
-  "version": "0.1.0",
+  "version": "1.0.0",
   "description": "Boilerplate for ReactJS, Redux, Hot Loading and Firebase 3.x",
   "scripts": {
     "prestart": "babel-node tools/startMessage.js",
@@ -32,17 +32,21 @@
   "devDependencies": {
     "babel-cli": "^6.9.0",
     "babel-core": "^6.9.1",
-    "babel-eslint": "^6.0.4",
+    "babel-eslint": "^6.1.2",
     "babel-loader": "^6.2.4",
+    "babel-plugin-module-resolver": "^3.1.1",
+    "babel-plugin-react-native-web": "^0.9.5",
+    "babel-preset-env": "^1.7.0",
     "babel-preset-es2015": "^6.9.0",
     "babel-preset-react": "^6.5.0",
-    "babel-preset-stage-0": "^6.5.0",
+    "babel-preset-stage-0": "^6.24.1",
     "babel-register": "6.9.0",
     "colors": "^1.1.2",
     "css-loader": "^0.23.1",
     "enzyme": "^2.3.0",
     "eslint": "^2.11.1",
-    "eslint-plugin-import": "^1.8.1",
+    "eslint-import-resolver-babel-module": "^4.0.0",
+    "eslint-plugin-import": "^1.16.0",
     "eslint-plugin-react": "^5.1.1",
     "eslint-watch": "^2.1.11",
     "expect": "^1.20.1",
@@ -54,28 +58,33 @@
     "npm-run-all": "^2.1.1",
     "open": "0.0.5",
     "react-addons-test-utils": "^15.1.0",
-    "react-hot-loader": "^3.0.0-beta.2",
+    "react-hot-loader": "^3.1.3",
     "redux-immutable-state-invariant": "^1.2.3",
     "redux-mock-store": "^1.0.4",
     "style-loader": "^0.13.1",
     "url-loader": "^0.5.7",
     "webpack": "^1.13.1",
-    "webpack-dev-middleware": "^1.6.1",
-    "webpack-hot-middleware": "^2.10.0"
+    "webpack-dev-middleware": "^1.12.2",
+    "webpack-hot-middleware": "^2.24.3"
   },
   "dependencies": {
     "bootstrap": "^3.3.6",
     "firebase": "^3.0.3",
     "jquery": "^2.2.4",
-    "react": "^15.1.0",
-    "react-dom": "^15.1.0",
+    "prop-types": "^15.6.2",
+    "react": "^16.6.0",
+    "react-art": "^16.6.0",
+    "react-dom": "^16.6.0",
     "react-loader": "^2.4.0",
+    "react-native-web": "^0.9.5",
     "react-redux": "^4.4.5",
-    "react-router": "^2.4.1",
+    "react-router": "^3.2.1",
     "react-router-redux": "^4.0.4",
     "redux": "^3.5.2",
     "redux-thunk": "^2.1.0",
-    "toastr": "^2.1.2"
+    "styled-components": "^4.0.3",
+    "toastr": "^2.1.2",
+    "uuid": "^3.3.2"
   },
   "repository": {
     "type": "git",
