--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "react-hot-redux-firebase-starter",
-  "version": "1.0.4",
-  "description": "Boilerplate for ReactJS, Redux, Hot Loading and Firebase 3.x",
+  "name": "ChatX",
+  "version": "2.0.0",
+  "description": "Simple Chat with ReactJS, Redux, Hot Loading and Firebase 3.x",
   "scripts": {
     "prestart": "babel-node tools/startMessage.js",
     "start": "npm-run-all --parallel test:watch open:src lint:watch",
@@ -70,7 +70,7 @@
   "dependencies": {
     "bootstrap": "^3.3.6",
     "firebase": "^3.0.3",
-    "jquery": "^2.2.4",
+    "moment": "^2.22.2",
     "prop-types": "^15.6.2",
     "react": "^16.6.0",
     "react-art": "^16.6.0",
@@ -79,7 +79,7 @@
     "react-native-web": "^0.9.5",
     "react-redux": "^4.4.5",
     "react-router": "^3.2.1",
-    "react-router-redux": "^4.0.4",
+    "react-router-redux": "^4.0.8",
     "redux": "^3.5.2",
     "redux-thunk": "^2.1.0",
     "styled-components": "^4.0.3",
